商品購入画面でseedのテストユーザーの情報を表示

--- a/app/views/purchases/new.html.haml
+++ b/app/views/purchases/new.html.haml
@@ -1,4 +1,5 @@
 .product-buy-confirm
   =render "shared/new-header"
-  =render "shared/confirm-product"
+  =render "shared/confirm-product", name: @product.name,price:@product.price
+  -# =render "shared/confirm-product", name: @product.name,price:@product.price,image_url:@product.image
   =render "shared/new-footer"
