--- a/app/views/shared/_confirm-product.html.haml
+++ b/app/views/shared/_confirm-product.html.haml
@@ -7,17 +7,21 @@
         .confirm-group__form__main__pict
           .confirm-group__form__main__pict__frame
             = image_tag '商品画像.jpg', width: '100%'
-          %h2 新品☆CLARINS コンフォート リップオイル3本セット
+            -# = image_tag image_url, width:'100%'
+          %h2=name
+          -# %h2 新品☆CLARINS コンフォート リップオイル3本セット
 
         .confirm-group__form__main__price
-          %p ¥ 5,000 
+          %p¥#{price}
+          -# %p ¥ 5,000 
           %span 送料込み
 
         .confirm-group__form__main__point ポイントはありません
 
         .confirm-group__form__main__buy-price
           %p 支払い金額
-          %p.buy-price-table ¥ 5,000 
+          -# %p.buy-price-table ¥ 5,000
+          %p.buy-price-table ¥#{price}
 
         .confirm-group__form__main__button 購入する
 
@@ -34,8 +38,8 @@
       .user-info__main
         %h3 支払い方法
         %p.user-info__main__text
-          ************7385 
-          %br 12 / 22
+          ************#{@last4} 
+          %br #{@month} / #{@year}
         .user-info__main__card
-          = image_tag 'visa.svg', width: '100%'
+          = image_tag '#{@brand}.svg', width: '100%'
         %a.user-info__main__fix 変更する
