レンダーとビューのレイアウト調整

--- a/app/assets/stylesheets/registration_box.scss
+++ b/app/assets/stylesheets/registration_box.scss
@@ -1,5 +1,7 @@
 .registration__container{
   background: #fff;
+  width: 700px;
+  margin: 0 auto;
   .registration__title{
     @include registration-title;
   }
