--- a/app/views/address_registration/new.html.haml
+++ b/app/views/address_registration/new.html.haml
@@ -1,3 +1,4 @@
+= render 'signup/registration-header'
 .registration__container
   .registration__title 住所入力
   %form.registration__content
@@ -19,4 +20,5 @@
       = render 'render/input-form-optional',label:"建物名",example:"例)柳ビル103"
       = render 'render/input-form-optional',label:"電話",example:"例) 000000000"
       = render 'render/input-form-button',name:'次へ進む'
-
+%footer.registration_login-footer.test
+  =render 'signup/registration_login_footer'
