--- a/app/views/credit_cards/new.html.haml
+++ b/app/views/credit_cards/new.html.haml
@@ -1,3 +1,4 @@
+= render 'signup/registration-header'
 .registration__container
   .registration__title 支払い方法
   = form_with  url:user_credit_cards_path,class:'registration__content',id:'new_credit_card' do |f|
@@ -19,3 +20,5 @@
       =render 'render/help-link',text:'カード裏面の番号とは？',address:root_path
       .input-form-box
         = f.submit '次へ進む', class:"btn-red"
+%footer.registration_login-footer.test
+  =render 'signup/registration_login_footer'
