モデル名の変更

--- a/app/views/shared/_new-listing-form.html.haml
+++ b/app/views/shared/_new-listing-form.html.haml
@@ -40,7 +40,7 @@
             カテゴリー
           %span.listing__form__detail__box__form-group__require
             必須
-          = f.collection_select :category_id, Categoryactive.all.take(13), :id, :name, {prompt: "---"}, {class: 'listing__form__detail__box__form-group__category-select'}
+          = f.collection_select :category_id, Category.all.take(13), :id, :name, {prompt: "---"}, {class: 'listing__form__detail__box__form-group__category-select'}
             
         .listing__form__detail__box__form-group
           %label
