--- a/app/views/address_registration/new.html.haml
+++ b/app/views/address_registration/new.html.haml
@@ -1,24 +1,24 @@
 = render 'signup/registration-header'
 .registration__container
   .registration__title 住所入力
-  %form.registration__content
+  = form_with url:address_registration_index_path,class:'registration__content' do |f|
     .registration__content__box
       .input-form-box.first-form
         %label お名前
         %span.required 必須
-        %input.input__form__group__input{placeholder:"例) 山田"}
-        %input.input__form__group__input{placeholder:"例) 彩"}
+        = f.text_field :family_name, class:'input__form__group__input',placeholder:"例) 山田"
+        = f.text_field :first_name,class:'input__form__group__input',placeholder:"例) 彩"
       .input-form-box
         %label お名前カナ
         %span.required 必須
-        %input.input__form__group__input{placeholder:"例) ヤマダ"}
-        %input.input__form__group__input{placeholder:"例) アヤ"}
-      = render 'render/input-form-required',label:"郵便番号",example:"例)123-4567"
-      = render "render/prefecture-required"
-      = render 'render/input-form-required',label:"市区町村",example:"例)横浜市緑区"
-      = render 'render/input-form-required',label:"番地",example:"例)青山1-1-1"
-      = render 'render/input-form-optional',label:"建物名",example:"例)柳ビル103"
-      = render 'render/input-form-optional',label:"電話",example:"例) 000000000"
-      = render 'render/input-form-button',name:'次へ進む'
+        =f.text_field :family_furigana,class:'input__form__group__input',placeholder:"例) ヤマダ"
+        =f.text_field :first_furigana,class:'input__form__group__input',placeholder:"例) アヤ"
+      = render 'render/input-form-required',label:"郵便番号",example:"例)123-4567",form:f,name: :postal_code
+      = render "render/prefecture-required",form:f
+      = render 'render/input-form-required',label:"市区町村",example:"例)横浜市緑区",form:f,name: :city
+      = render 'render/input-form-required',label:"番地",example:"例)青山1-1-1",form:f,name: :block
+      = render 'render/input-form-optional',label:"建物名",example:"例)柳ビル103",form:f,name: :building
+      = render 'render/input-form-optional',label:"電話",example:"例) 000000000",form:f,name: :phone_number
+      = render 'render/input-form-button',name:'次へ進む',form:f
 %footer.registration_login-footer.test
   =render 'signup/registration_login_footer'
