--- a/app/views/render/_input-form-required.html.haml
+++ b/app/views/render/_input-form-required.html.haml
@@ -1,4 +1,4 @@
 .input-form-box
   %label=label
   %span.required 必須
-  =form.text_field name,placeholder:example
+  =f.text_field :name, placeholder: example
