--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,6 +1,7 @@
 .wrapper--item-detail
   .item-detail
-    %h1 ルールマラン　ノースリーブ
+    %h1
+      @product.name
     .item-detail__image-text
       .item-detail__image
         %ul.item-detail__image__sliders
