--- a/app/views/top/_content.html.haml
+++ b/app/views/top/_content.html.haml
@@ -8,17 +8,18 @@
     %h2.contents__all-items__head
       すべての商品
     .contents__items
-      .contents__item__box
-        .contents__item__box__image
-          = image_tag 'item1.jpg', alt: '', height: '213', width: '213', class: ''
-        .contents__item__box__item-name
-          = @products[0].name
-        .contents__item__box__price-favorite
-          .contents__item__box__price
-            = "¥#{@products[0].price.to_s(:delimited)}"
-          .contents__item__box__favorite
-            %i.far.fa-heart.gray
-            %span 6
+      - @products.each do |product|
+        .contents__item__box
+          .contents__item__box__image
+            = image_tag 'item1.jpg', alt: '', height: '213', width: '213', class: ''
+          .contents__item__box__item-name
+            = product.name
+          .contents__item__box__price-favorite
+            .contents__item__box__price
+              = "¥#{product.price.to_s(:delimited)}"
+            .contents__item__box__favorite
+              %i.far.fa-heart.gray
+              %span 6
       -# .contents__item__box
       -#   .contents__item__box__image
       -#     = image_tag 'item1.jpg', alt: '', height: '213', width: '213', class: ''
