--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -5,11 +5,11 @@
     .item-detail__image-text
       .item-detail__image
         %ul.item-detail__image__sliders
-          - @products_images.each do |products_image|
+          - @product.products_images.each do |products_image|
             %li.item-detail__image__slider
               = image_tag products_image.image_url, alt: '', height: 'auto', width: '270px'
         %ul.item-detail__image__thumbnails
-          - @products_images.each do |products_image|
+          - @product.products_images.each do |products_image|
             %li.item-detail__image__thumbnail
               = image_tag products_image.image_url, alt: '', height: '60px', width: '60px'
       .item-detail__table
@@ -54,10 +54,11 @@
           %tr
             %th 配送料の負担
             %td
-              = @product.shipping_fee_id
+              = @product.shipping_fee.name
           %tr
             %th 配送の方法
-            %td ゆうゆうメルカリ便
+            %td
+              = @product.shipping_method.name
           %tr
             %th 配送元地域
             %td
@@ -83,11 +84,13 @@
       .item-detail__like
         %i.far.fa-heart
         %span いいね！
-        %span 4
+        %span
+          = @product.like.like
       .item-detail__bad
         %i.far.fa-flag
         %span 不適切な商品の報告
         %span
+          = @product.like.bad
       .item-detail__other
         %i.fas.fa-lock
         = link_to 'あんしん・あんぜんへの取り組み','/'
@@ -127,6 +130,7 @@
                 %i.far.fa-flag
         .item-detail__comment__caution
           相手のことを考え丁寧なコメントを心がけましょう。不快な言葉遣いなどは利用制限や退会処分となることがあります。
+        
         %textarea.item-detail__comment__form
         .item-detail__comment__form__button
           コメントする
