--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -47,28 +47,51 @@
         line-height: 1.5;
       }
       &__box{
-        display: block;
-        width: 620px;
-        height: 172px;
         display: flex;
-        cursor: pointer;
-        background: #f5f5f5;
-        border: 1px dashed #ccc;
-
-        &__space{
+        flex-direction: row;
+        flex-wrap: wrap;
+        #preview{
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+        }
+        &__preview{
+          // display: flex;
+          // flex-grow: 1;
+          width: 620px;
+          height: 172px;
+          // display: flex;
+          cursor: pointer;
+          background: #f5f5f5;
+          border: 1px dashed #ccc;
+        }
+        #preview2{
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+        }
+        &__preview2{
+          width: 620px;
+          height: 172px;
+          cursor: pointer;
+          background: #f5f5f5;
+          border: 1px dashed #ccc;
+        }
+        
+        .listing-image-container{
           list-style: none;
           width: 116px;
-          margin: 0 0 10px 0;
+          margin-bottom: 10px;
           border: 1px solid black;
-          &__pict{
+          .image-box{
+            line-height: 116px;
             height: 116px;
             margin: 0;
-            &__mini{
-              line-height: 116px;
+            img {
               width: 116px;
             }
           }
-          &__button{
+          .button{
             display: flex;
             justify-content: space-around;
             a{
@@ -88,22 +111,22 @@
           font-size: 14px;
           line-height: 1.5;
         }
-      }
-      &__box2{
-        margin-top: 10px;
-        display: block;
-        width: 620px;
-        height: 172px;
-        display: flex;
-        cursor: pointer;
-        background: #f5f5f5;
-        border: 1px dashed #ccc;
-        &__comment{
-          text-align: center;
-          left: 16px;
-          right: 16px;
-          font-size: 14px;
-          line-height: 1.5;
+        &__preview2{
+          margin-top: 10px;
+          display: block;
+          width: 620px;
+          height: 172px;
+          display: flex;
+          cursor: pointer;
+          background: #f5f5f5;
+          border: 1px dashed #ccc;
+          &__comment{
+            text-align: center;
+            left: 16px;
+            right: 16px;
+            font-size: 14px;
+            line-height: 1.5;
+          }
         }
       }
     }
@@ -327,3 +350,34 @@
   }
 }
 
+
+.listing-image-continer{
+  display:flex;
+  flex-direction:row-reverse;
+  .image-box{
+    width:116px;
+    height:162px;
+    background-color:#f5f5f5;
+    margin-right:10px;
+    border: 1px solid #eee;
+    img{
+      // height:114px;
+      width:100%;
+    }
+    .button{
+      height:44px;
+      display:flex;
+      a{
+        width:50%;
+        height:100%;
+        display:inline-block;
+        line-height:44px;
+        color:#0099E8;
+        font-size:14px;
+      }
+      .destroy{
+        border-left: 1px solid #eee;
+      }
+    }
+  }
+};
