--- a/app/views/render/_input-form-optional.html.haml
+++ b/app/views/render/_input-form-optional.html.haml
@@ -1,4 +1,4 @@
 .input-form-box
   %label=label
   %span.optional 任意
-  %input{type:"text",placeholder:example}
+  = form.text_field name, {placeholder:example}
