ログイン後のクレジットカード登録のビュー修正

--- a/app/assets/stylesheets/common_layout/form.scss
+++ b/app/assets/stylesheets/common_layout/form.scss
@@ -196,6 +196,7 @@
       display: block;
       @include button-red;
       height: 48px;
+      line-height: 48px;
     }
     i{
       position: absolute;
