--- a/app/assets/stylesheets/mypage_card.scss
+++ b/app/assets/stylesheets/mypage_card.scss
@@ -7,7 +7,7 @@
 .registration__content.mypage__content{
   padding: 24px 16px 40px;
   font-size: 14px;
-  .mypage-card__month-form-box{
+  .mypage__month-form-box{
     @include form-default;
     .selecters_wrap{
       .select_wrap{
