jQueryで画像表示

--- a/app/views/shared/_new-listing-form.html.haml
+++ b/app/views/shared/_new-listing-form.html.haml
@@ -25,6 +25,8 @@
 
 
         #preview2
+        %label.listing__form__upload__box__preview2{style:"display:none;"}
+          = f.file_field :images, class:'listing-upload-drop-file2', style: "display:none;"
 
       -#   .listing__form__upload__box__comment
       -#     = f.file_field :images, class:'listing-upload-drop-file',multiple:true, style: "display:none;"
