--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -71,7 +71,7 @@
           flex-wrap: wrap;
         }
         &__preview2{
-          width: 620px;
+          width: 590px;
           height: 172px;
           cursor: pointer;
           background: #f5f5f5;
@@ -112,9 +112,9 @@
           line-height: 1.5;
         }
         &__preview2{
-          margin-top: 10px;
+          margin-bottom: 10px;
           display: block;
-          width: 620px;
+          width: 590px;
           height: 172px;
           display: flex;
           cursor: pointer;
