--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -52,8 +52,8 @@
         flex-wrap: wrap;
         #preview{
           display: flex;
-          flex-direction: row;
-          flex-wrap: wrap;
+          box-sizing: border-box;
+          padding: 0 10px 10px 0;
         }
         &__preview{
           width: 620px;
@@ -65,7 +65,7 @@
         #preview2{
           display: flex;
           flex-direction: row;
-          flex-wrap: wrap;
+          padding: 0 10px 10px 0;
         }
         &__preview2{
           width: 590px;
@@ -77,15 +77,17 @@
         
         .listing-image-container{
           list-style: none;
-          width: 116px;
+          width: 100px;
           margin-bottom: 10px;
-          border: 1px solid black;
+          border: 1px solid #eee;
+          margin: 0 0 10px 10px;
           .image-box{
+            width: 100px;
             line-height: 116px;
             height: 116px;
             margin: 0;
             img {
-              width: 116px;
+              width: 100px;
             }
           }
           .button{
@@ -348,14 +350,12 @@
 }
 
 
-.listing-image-continer{
-  display:flex;
-  flex-direction:row-reverse;
+.listing-image-container{
+  
   .image-box{
     width:116px;
     height:162px;
     background-color:#f5f5f5;
-    margin-right:10px;
     border: 1px solid #eee;
     img{
       width:100%;
