--- a/app/views/shared/_new-listing-form.html.haml
+++ b/app/views/shared/_new-listing-form.html.haml
@@ -15,28 +15,28 @@
       .listing__form__upload__box
         #preview
         %label.listing__form__upload__box__preview
-          = f.file_field :images, class:'listing-upload-drop-file', style: "display:none;", multiple:true
+          = f.file_field :images, class:'listing-upload-drop-file',multiple:true
         %label.listing__form__upload__box__preview{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file', style: "display:none;", multiple:true
+          = f.file_field :images, class:'listing-upload-drop-file', multiple:true
         %label.listing__form__upload__box__preview{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file', style: "display:none;", multiple:true
+          = f.file_field :images, class:'listing-upload-drop-file', multiple:true
         %label.listing__form__upload__box__preview{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file', style: "display:none;", multiple:true
+          = f.file_field :images, class:'listing-upload-drop-file', multiple:true
         %label.listing__form__upload__box__preview{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file', style: "display:none;", multiple:true
+          = f.file_field :images, class:'listing-upload-drop-file', multiple:true
 
         #preview2
-        %label.listing__form__upload__box__preview2{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file2', style: "display:none;", multiple:true
-        %label.listing__form__upload__box__preview2{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file2', style: "display:none;", multiple:true
-        %label.listing__form__upload__box__preview2{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file2', style: "display:none;", multiple:true
-        %label.listing__form__upload__box__preview2{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file2', style: "display:none;", multiple:true
-        %label.listing__form__upload__box__preview2{style:"display:none;"}
-          = f.file_field :images, class:'listing-upload-drop-file2', style: "display:none;", multiple:true
-   
+        %label.listing__form__upload__box__preview2
+          = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+        %label.listing__form__upload__box__preview2
+          = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+        %label.listing__form__upload__box__preview2
+          = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+        %label.listing__form__upload__box__preview2
+          = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+        %label.listing__form__upload__box__preview2
+          = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+
     .listing__form__product
       .listing__form__product__form-group
         商品名
