--- a/app/views/phone_number_authorization/new.html.haml
+++ b/app/views/phone_number_authorization/new.html.haml
@@ -1,7 +1,7 @@
 = render 'signup/registration-header'
 .registration__container
   .registration__title 電話番号の確認
-  = form_with url:phone_number_authorization_index_path,class:'registration__content' do |f|
+  = form_with model:@phone,url:phone_number_authorization_index_path,class:'registration__content' do |f|
     .registration__content__box
       .input-form-box.first-form
         %label 携帯電話の番号
