--- a/app/views/address_registration/new.html.haml
+++ b/app/views/address_registration/new.html.haml
@@ -1,7 +1,7 @@
 = render 'signup/registration-header'
 .registration__container
   .registration__title 住所入力
-  = form_with url:address_registration_index_path,class:'registration__content' do |f|
+  = form_with model:@address, url:address_registration_index_path,class:'registration__content' do |f|
     .registration__content__box
       .input-form-box.first-form
         %label お名前
