--- a/app/assets/stylesheets/common_layout/form.scss
+++ b/app/assets/stylesheets/common_layout/form.scss
@@ -160,6 +160,10 @@
       width: 100%;
       padding-top: 8px;
     }
+    h2{
+      text-align: center;
+      font-size: 22px;
+    }
   }
 }
 
