登録完了画面のステップバー

--- a/app/views/signup/_registration-header.html.haml
+++ b/app/views/signup/_registration-header.html.haml
@@ -14,6 +14,6 @@
       %li{class:@credit_information_title}
         支払い方法
         .progress-status{class:@credit_information}
-      %li
+      %li{class:@registration_check_title}
         完了
-        .progress-status
+        .progress-status{class:@registration_check}
